# rsrun

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/rsrun/: Cargo.toml
crates/rsrun-cli/: Cargo.toml
crates/rsrun-cli/src/: main.rs
crates/rsrun-core/: Cargo.toml
crates/rsrun-core/src/: clone3.rs  lib.rs  plan.rs  rollout.rs  runtime.rs  spec.rs  state.rs
crates/rsrun-ext/: Cargo.toml
crates/rsrun-ext/src/: cgroup.rs  devices.rs  hooks.rs  lib.rs  seccomp.rs  syscall_table_aarch64.rs  syscall_table_x86_64.rs
crates/rsrun/src/: main.rs
docs/: architecture.md  benchmarks.md  docker.md  gaps-vs-crun.md  implementation-notes.md  oci-compliance.md  roadmap.md  security.md
scripts/: bench.sh  bench_cve_2019_5736.sh  cve_2019_5736_regression.sh  install-hooks.sh  oci_validation.sh  pre-commit  smoke.sh  start_cybergym_test.sh
src/: clone3.rs  main.rs  plan.rs  runtime.rs  runtime_linux.rs  runtime_stub.rs  spec.rs
