[package]
name = "rsrun"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"
description = "A small OCI runtime in Rust."
readme = "README.md"
repository = "https://github.com/rsrun/rsrun"
keywords = ["container", "oci", "runtime"]
categories = ["virtualization", "command-line-utilities"]

[[bin]]
name = "rsrun"
path = "src/main.rs"

[dependencies]
nix = { version = "0.29", features = ["sched", "process", "fs", "mount", "signal", "user", "term", "hostname"] }
libc = "0.2"
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
