[workspace]
resolver = "2"
members = ["crates/rsrun-core", "crates/rsrun-ext", "crates/rsrun-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT"
repository = "https://github.com/rsrun/rsrun"

[workspace.dependencies]
nix = { version = "0.29", features = ["sched", "process", "fs", "mount", "signal", "user", "term", "hostname"] }
libc = "0.2"
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
