[package]
name = "rsrun-core"
description = "Hot-path OCI lifecycle: clone3, namespaces, mounts, caps, exec."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nix.workspace = true
libc.workspace = true
serde_json.workspace = true
