[package]
name = "rsrun-ext"
description = "Standalone-runtime extras: seccomp, cgroup limits, hooks, TTY."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nix.workspace = true
libc.workspace = true
serde_json.workspace = true
rsrun-core = { path = "../rsrun-core" }
seccompiler = "0.5"
