[package]
name = "rsrun-ext"
description = "Standalone-runtime extras: seccomp, cgroup limits, hooks, TTY."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["seccomp", "cgroup-limits", "hooks", "device-cgroup-bpf"]
# OCI seccomp profile compilation.
seccomp = []
# linux.resources.* cgroup-v2 knob writes.
cgroup-limits = []
# OCI hooks for all six phases.
hooks = []
# Hand-rolled BPF_PROG_TYPE_CGROUP_DEVICE emitter.
device-cgroup-bpf = []

[dependencies]
nix.workspace = true
libc.workspace = true
serde_json.workspace = true
rsrun-core = { path = "../rsrun-core" }
